Fix width on mobile

--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -111,6 +111,7 @@ nav.pagination {
     @include mobile {
       max-width: none;
       min-width: 0;
+      width: 100%;
     }
   }
 
